<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:layout_marginEnd="@dimen/dimen_10dp"
        android:background="@drawable/item_img_bg_round"
        app:cardCornerRadius="@dimen/dimen_30dp"
        app:cardElevation="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginBottom="-40dp"
                android:background="@drawable/tv_bg_colo"
                android:elevation="@dimen/dimen_10dp"
                android:singleLine="true"
                android:text="@string/exclusive_discount_on_every_order"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_12sp"
                tools:targetApi="lollipop" />

            <ImageView
                android:id="@+id/merchant_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:src="@drawable/food_banner_two" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginTop="-50dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:layout_marginBottom="@dimen/dimen_5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_10dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/merchant_thumbnail"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/food_banner_two"
                        app:civ_border_color="@color/purple_200"
                        app:civ_border_width="@dimen/dimen_1dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/merchant_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/celebration_by_online_kaka"
                        android:textColor="@color/black"
                        android:textFontWeight="800"
                        android:textSize="14sp"
                        tools:targetApi="p" />

                    <TextView
                        android:id="@+id/merchant_special_dish_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8dp"
                        android:text="@string/celebration_by_online_kaka"
                        android:textSize="@dimen/dimen_12sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/special_info_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/celebration_by_online_kaka"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/dimen_12sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginEnd="@dimen/dimen_15dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/_4_5"
                    android:textAlignment="textStart"
                    app:drawableStartCompat="@drawable/ic_baseline_star_24" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="end"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/view_more_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dimen_20dp"
                        android:background="@color/teal_200"
                        android:text="@string/view_more"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        tools:targetApi="m" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>